test_manifests/1_syntax_error.yaml
apiVersion: v1
kind: Pod
metadata:
name: broken-pod
spec:
 containers:
   - name: nginx
     image: nginx
