test_manifests/3_incorrect_apiversion.yaml
apiVersion: apps/v1beta
kind: Deployment
metadata:
  name: invalid-apiversion
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
