test_manifests/6_duplicate_keys.yaml
apiVersion: v1
kind: Pod
metadata:
  name: duplicate-keys
  name: another-name
spec:
  containers:
  - name: nginx
    image: nginx
