test_manifests/8_invalid_image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-image
spec:
  containers:
  - name: nginx
    image: invalid_image:nonexistent
