test_manifests/9_wrong_label_type.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wrong-label-type
  labels:
    app: 12345
spec:
  containers:
  - name: nginx
    image: nginx
