test_manifests/10_invalid_service_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: invalid-service-port
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: "eighty"
    targetPort: 80
