test_manifests/5_unsupported_field.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-with-unsupported-field
spec:
  selector:
    app: nginx
  unsupportedField: value
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
