test_manifests/pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashgen-service
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      protocol: TCP
  selector:
    app: dashgen

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashgen-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashgen
  template:
    metadata:
      labels:
        app: dashgen
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-volume-claim
        - name: config-volume
          configMap:
            name: config-map
            items:
              - key: defaultConfig.json
                path: defaultConfig.json
      containers:
        - name: dashgen
          image: gitlab.ilabt.imec.be:4567/togoetha/sysmgmt/dashgen
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /dash
              name: shared-storage
            - mountPath: /config
              name: config-volume
          resources:
            requests:
              memory: "500Mi"
              cpu: "2000m"
            limits:
              memory: "1000Mi"
              cpu: "3000m"
        - name: logger
          image: gitlab.ilabt.imec.be:4567/togoetha/sysmgmt/logservice
          volumeMounts:
            - mountPath: /logs
              name: shared-storage
            - mountPath: /config
              name: config-volume
          resources:
            requests:
              memory: "20Mi"
              cpu: "50m"
            limits:
              memory: "50Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30081
      protocol: TCP
  selector:
    app: httpd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  replicas: 3  # Ensuring high availability
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-volume-claim
      containers:
        - name: httpd
          image: gitlab.ilabt.imec.be:4567/togoetha/sysmgmt/httpd
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: shared-storage
          resources:
            limits:
              memory: "300Mi"
              cpu: "500m"
